# distributed-job-scheduler

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
agent/: AGENT-README.md  package-lock.json  package.json
agent/src/: AgentMainEntry.js  agent.js  bootstrap.js
agent/src/core/: jobRunner.js  jobScheduler.js
agent/src/services/: agentService.js  apiService.js  heartbeatService.js  wsClient.js
agent/src/utils/: cronUtils.js
backend/: scheduler_server  scheduler_server.cpp
backend/scheduler_server.dSYM/Contents/Resources/DWARF/: scheduler_server
frontend/: FRONTEND-README.md
frontend/src/: App.jsx  main.jsx  tailwind.config.js
frontend/src/components/: Header.jsx  ProtectedRoute.jsx
frontend/src/components/Auth/: Login.jsx  Register.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Home.jsx  Monitor.jsx  NewJob.jsx
frontend/src/services/: api.js
relay-server/: RELAY-SERVER-README.md  package-lock.json  package.json
relay-server/db/: database.sqlite
relay-server/db/config/: config.json
relay-server/db/migrations/: 20250526182017-create-user.js
relay-server/src/: server.js  wsServer.js
relay-server/src/models/: Agent.js  Job.js  User.js  index.js
src/backend/: scheduler_client  scheduler_client.cpp  scheduler_server  scheduler_server.cpp  server.js  tasks.json
src/backend/scheduler_server.dSYM/Contents/: Info.plist
src/frontend/: package-lock.json
src/frontend/src/: App.jsx  tailwind.config.js
src/frontend/src/components/: Header.jsx
src/frontend/src/pages/: Home.jsx  Monitor.jsx  NewJob.jsx
(+2 files in other folders)
